2005-06-09  Cedric Gustin  <cedric.gustin@swing.be>

	* setup.py : Define HAVE_BIND_TEXTDOMAIN_CODESET on win32.

2005-05-22   Tim Evans  <t.evans@aranz.com>

	* gtk/gtktreeview.override
	(_wrap_gtk_tree_view_map_expanded_rows): Don't unref borrowed
	reference data.user_data.  Reviewed by Gustavo Carneiro; Fixes
	#165373 (crash due to extra Py_XDECREF in
	gtk.TreeView.map_expanded_rows)

2005-05-09  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== PyGTK 2.6.2 ===
2005-05-09  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygenum.c (pyg_enum_new): Complain if ret is NULL, 
	Fixes #303524.

	* gobject/pygflags.c (pyg_flags_new): Change exception format to
	be consistent with the one in enum

	* gtk/gtk.override: Allow None to be passed in to:
	set_group for RadioAction.set_group(), RadioToolButton.set_group()
	and RadioMenuItem.set_group(). Fixes #170514
	
	* tests/test_radiobutton.py: Refactor and add unittests for
	RadioAction, RadioToolButton and RadioMenuItem. 

2005-05-09  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #303573 - "exceptions raised in a child watch
	handler are silently swallowed"

	* gobject/gobjectmodule.c:
	(child_watch_func),
	(_pyg_spawn_async_callback): if PyObject_CallFunction()
	returns NULL, print a traceback of the exception.
	
	* tests/test_mainloop.py: add testcase.
	
	* tests/Makefile.am: add test_mainloop.py

	Reviewed by Johan Dahlin <johan@gnome.org>

2005-05-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gdk.override (_wrap_gdk_event_tp_setattr): Fix setter for
	"window" attribute: don't unblock threads around g_bject_ref;
	g_object_unref previous event.window.  Fixes #302622.

	* tests/Makefile.am (tests): Add test_gdkevent.py.
	
	* tests/test_gdkevent.py: Add a test for gtk.gdk.Event.window setter.

2005-04-12  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/runtests.py (program): Fix indentation and a "name
	'program' is not defined" exception.
