@@ -1,3 +1,12 @@
+2005-07-07  Edward Hervey  <bilboed@fluendo.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* gobject/pygtype.c: (pyg_type_lookup), (pyg_register_gtype),
+	(pyg_register_boxed_custom), (pyg_value_from_pyobject),
+	(pyg_value_as_pyobject): Allow additional fundamental types to be 
+	registered through pyg_register_boxed_custom. Fixes #309625
+
 2005-06-09  Cedric Gustin  <cedric.gustin@swing.be>
 
 	* setup.py : Define HAVE_BIND_TEXTDOMAIN_CODESET on win32.
